<resources>
    <string name="app_name">Baksara</string>
    <string name="home">Home</string>
    <string name="greeting">Selamat Belajar</string>
    <string name="greeting_aksara">ꦱꦼ ꦭ ꦩ ꦠ꧀ꦧꦼ ꦭ ꦗꦂ</string>
    <string name="artikel">Artikel</string>
    <string name="ikuti">Ikuti</string>
    <string name="scanner">Scanner</string>
    <string name="pustaka">Pustaka</string>
    <string name="profile">Profil</string>
    <string name="exp">150 XP</string>
    <string name="current_exp">1979</string>
    <string name="max_exp">2500</string>
    <string name="slash">/</string>
    <string name="total_xp">Total XP</string>
    <string name="current_level">13</string>
    <string name="level_text">Level</string>
    <string name="perintah_soal">Perhatikan aksara ini lalu lanjutkan dengan menekan tombol mulai</string>
    <string name="perintah_soal_2">Gambarkan aksara berikut ini!</string>
    <string name="perintah_soal_3">Arti dari aksara berikut ini adalah?</string>
    <string name="nama_tantangan">Nama Tantangan</string>
    <string name="hancaraka_placeholder">ꦲ</string>
    <string name="ha_placeholder">Ha</string>
    <string name="ha">ꦲ</string>
    <string name="na_placeholder">Na</string>
    <string name="ca_placeholder">Ca</string>
    <string name="ra_placeholder">Ra</string>
    <string name="hancaraka_lengkap_placeholder">ꦲ ꦤ ꦕ ꦫ ꦏ</string>
    <string name="hancaraka_translate_placeholder">Ha   Na   Ca   Ra   Ka</string>
    <string name="pelajaran_placeholder">Pelajaran 1</string>
    <string name="pelajaran_selanjutnya">Pelajaran Selanjutnya</string>
    <string name="kembali_kelas">Kembali Ke Kelas</string>
    <string name="modul_placeholder">Modul 1</string>
    <string name="modul_deskripsi_placeholder">Carakan Dasar</string>

    <!--Onboarding Text-->
    <string name="title_menu_1">Belajar Aksara \n Dengan Mudah</string>
    <string name="title_menu_2">Kenali Cerita Wayang \n Dengan Aksara</string>
    <string name="title_menu_3">Scan Aksara\nUntuk Transliterasi</string>
    <string name="title_menu_4">Selesaikan Tantangan \n Yang Tersedia</string>
    <string name="title_menu_5">Tingkatkan Level \n dan Raih Lencana</string>
    <string name="desc_menu_1">Belajar aksara di mana saja\ndan kapan saja melalui \n smartphone Anda.</string>
    <string name="desc_menu_2">Belajar aksara dengan\nmembaca cerita wayang.</string>
    <string name="desc_menu_3">Transliterasi aksara melalui\nkamera dengan scanning.</string>
    <string name="desc_menu_4">Uji pemahaman aksara\nanda pada tantangan yang \n tersedia.</string>
    <string name="desc_menu_5">Selesaikan modul untuk\ntingkatkan level dan \n dapatkan lencana.</string>

    <!--Pustaka Text-->
    <string name="tab_cerita">Cerita</string>
    <string name="tab_kamus">Kamus</string>
    <string name="tab_translator">Translator</string>
    <string name="pilih_cerita">Pilih Cerita</string>
    <string name="cari_cerita">Cari Cerita</string>
    <string name="judul_kamus">Carakan</string>
    <string name="deskripsi_kamus">Carakan merupakan kata dasar Aksara Jawa yang berjumlah 20 aksara pokok dan bersifat kesukukataan.  </string>
    <string name="pustaka_aksara">Aksara</string>
    <string name="pustaka_latin">Latin</string>
    <string name="pustaka_contoh_aksara1">ꦲꦫꦶꦆꦤꦶ</string>
    <string name="pustaka_contoh_aksara2">ꦲꦶꦗꦻꦴꦣꦻꦴꦤ꧀</string>
    <string name="pustaka_contoh_latin1">Hari Ini</string>
    <string name="pustaka_contoh_latin2">Hijau Daun</string>
    <string name="contoh_penggunaan">Contoh Penggunaan</string>
    <string name="aksara_latin">Aksara Latin</string>
    <string name="masukan_huruf_latin">Masukan Huruf Latin</string>
    <string name="hasil_aksara_jawa">Hasil Aksara Jawa</string>
    <string name="aksara_jawa">Aksara Jawa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modul_pembelajaran">Modul pembelajaran</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="tantangan">Tantangan</string>
    <string name="description">Description</string>
    <string name="information">Information</string>
    <string name="title">Title</string>
    <string name="button">Button</string>
</resources>