<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_kelas"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_pustaka"
        android:icon="@drawable/pustaka_icon"
        android:title="@string/pustaka" />

    <item android:id="@+id/navigation_scanner"
        android:title="@string/scanner"
        />
    <item
        android:id="@+id/navigation_artikel"
        android:icon="@drawable/artikel_icon"
        android:title="@string/artikel" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/profil_icon"
        android:title="@string/profile" />
</menu>
