<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_kelas">

    <fragment
        android:id="@+id/navigation_kelas"
        android:label="@string/home"
        tools:layout="@layout/fragment_kelas"
        />
    <fragment
        android:id="@+id/navigation_berita"
        android:label="@string/berita"
        tools:layout="@layout/fragment_berita"
        />
    <fragment
        android:id="@+id/navigation_scanner"
        android:label="@string/scanner"
        tools:layout="@layout/fragment_scanner"
        />
    <fragment
        android:id="@+id/navigation_pustaka"
        android:label="@string/pustaka"
        tools:layout="@layout/fragment_pustaka"
        />
    <fragment
        android:id="@+id/navigation_profil"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profil"
        />

</navigation>