<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_kelas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_pelajaran_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@id/tv_hancaraka_1"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/main_300"
            android:textSize="14sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/pelajaran_placeholder" />

        <TextView
            android:id="@+id/tv_hancaraka_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_extrabold"
            android:textAlignment="center"
            android:textColor="@color/main_200"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_pelajaran_1"
            tools:text="@string/hancaraka_lengkap_placeholder" />

        <TextView
            android:id="@+id/tv_latin_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="7dp"
            android:layout_toEndOf="@id/tv_hancaraka_1"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/main_200"
            android:textSize="12sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_hancaraka_1"
            tools:text="@string/hancaraka_translate_placeholder" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:backgroundTint="@color/success"
            android:clickable="true"
            card_view:tint="@color/neutral_white"
            android:contentDescription="@string/ikuti"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/baseline_play_arrow_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>